--- a/automations/switch-buttons/switch_inovelli_blue_garage_mudroom_door_press_or_hold_switch_mappings.yaml
+++ b/automations/switch-buttons/switch_inovelli_blue_garage_mudroom_door_press_or_hold_switch_mappings.yaml
@@ -10,6 +10,6 @@ use_blueprint:
       - action: script.inovelli_toggle_mmwave_hold_led_indicator
         data:
           switch_name: garage_interior_mudroom_inovelli_presence
-          normal_mode: Occupancy (default)
+          normal_mode_input_select: input_select.garage_interior_mudroom_mmwave_normal_mode
           hold_color: input_text.inovelli_manual_hold
           prev_led_color_helper: input_text.garage_mudroom_door_led_color
