--- a/automations/switch-buttons/switch_inovelli_blue_upstairs_primary_water_closet_press_or_hold_switch_mappings.yaml
+++ b/automations/switch-buttons/switch_inovelli_blue_upstairs_primary_water_closet_press_or_hold_switch_mappings.yaml
@@ -10,6 +10,6 @@ use_blueprint:
       - action: script.inovelli_toggle_mmwave_hold_led_indicator
         data:
           switch_name: upstairs_primary_water_closet_inovelli_presence
-          normal_mode: Occupancy (default)
-          hold_color: 85
+          normal_mode_input_select: input_select.upstairs_primary_water_closet_mmwave_normal_mode
+          hold_color: input_text.inovelli_manual_hold
           prev_led_color_helper: input_text.upstairs_primary_water_closet_led_color
