--- a/automations/switch-buttons/switch_inovelli_blue_upstairs_primary_shower_press_or_hold_switch_mappings.yaml
+++ b/automations/switch-buttons/switch_inovelli_blue_upstairs_primary_shower_press_or_hold_switch_mappings.yaml
@@ -6,6 +6,17 @@ use_blueprint:
   path: starbuck93/z2m-v2-0-inovelli-blue-series-2-in-1-switch-dimmer.yaml
   input:
     switch: 9a68c1936e65f693a505c4128d724607
+    config_single:
+      - action: light.toggle
+        metadata: {}
+        data: {}
+        target:
+          entity_id: light.upstairs_primary_bath_fan_light_inovelli_on_off
+      - action: input_boolean.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: input_boolean.upstairs_primary_bathroom_use_shower_delay
     config_double:
       - action: script.inovelli_toggle_mmwave_hold_led_indicator
         data:
