--- a/automations/switch-buttons/switch_inovelli_blue_upstairs_primary_bath_recessed_press_or_hold_switch_mappings.yaml
+++ b/automations/switch-buttons/switch_inovelli_blue_upstairs_primary_bath_recessed_press_or_hold_switch_mappings.yaml
@@ -1,47 +1,49 @@
 alias: >-
-  [Switch] [Inovelli Blue] : [Upstairs] [Primary Shower] : [Press or Hold] :
-  [Switch Mappings]
+  [Switch] [Inovelli Blue] : [Upstairs] [Primary Bath Recessed] : [Press or Hold]
+  : [Switch Mappings]
 description: ""
 use_blueprint:
   path: starbuck93/z2m-v2-0-inovelli-blue-series-2-in-1-switch-dimmer.yaml
   input:
-    switch: 9a68c1936e65f693a505c4128d724607
+    switch: 99146109082915c239d4aca69f0425a0
     config_single:
       - choose:
           - conditions:
               - condition: template
                 value_template: >-
-                  {{ is_state('light.upstairs_primary_bath_shower_inovelli_presence', 'on')
+                  {{ is_state('light.upstairs_primary_bath_vanity_inovelli_presence', 'on')
+                    and is_state('light.upstairs_primary_bath_shower_inovelli_presence', 'on')
                     and is_state('light.upstairs_primary_bath_fan_light_inovelli_on_off', 'on')
+                    and is_state('light.upstairs_primary_bath_lights', 'on')
                   }}
             sequence:
               - action: light.turn_off
                 metadata: {}
                 target:
                   entity_id:
+                    - light.upstairs_primary_bath_vanity_inovelli_presence
                     - light.upstairs_primary_bath_shower_inovelli_presence
                     - light.upstairs_primary_bath_fan_light_inovelli_on_off
+                    - light.upstairs_primary_bath_lights
+                data: {}
+              - action: input_boolean.turn_off
+                metadata: {}
+                target:
+                  entity_id: input_boolean.upstairs_primary_bathroom_use_shower_delay
                 data: {}
         default:
           - action: light.turn_on
             metadata: {}
             target:
               entity_id:
+                - light.upstairs_primary_bath_vanity_inovelli_presence
                 - light.upstairs_primary_bath_shower_inovelli_presence
                 - light.upstairs_primary_bath_fan_light_inovelli_on_off
+                - light.upstairs_primary_bath_lights
             data: {}
           - action: input_boolean.turn_on
             metadata: {}
             target:
               entity_id: input_boolean.upstairs_primary_bathroom_use_shower_delay
             data: {}
-    config_double:
-      - action: script.inovelli_toggle_mmwave_hold_led_indicator
-        data:
-          switch_name: upstairs_primary_bath_shower_inovelli_presence
-          normal_mode_input_select: input_select.upstairs_primary_bathroom_shower_mmwave_normal_mode
-          hold_color: input_text.inovelli_manual_hold
-          prev_led_color_helper: input_text.upstairs_primary_shower_led_color
-          automation_entity_ids:
-            - >-
-              automation.light_inovelli_primary_bathroom_motion_cleared_lights_off
+
