--- a/automations/switch-buttons/switch_inovelli_blue_downstairs_mudroom_press_or_hold_switch_mappings.yaml
+++ b/automations/switch-buttons/switch_inovelli_blue_downstairs_mudroom_press_or_hold_switch_mappings.yaml
@@ -13,3 +13,6 @@ use_blueprint:
           normal_mode_input_select: input_select.downstairs_mudroom_mmwave_normal_mode
           hold_color: input_text.inovelli_manual_hold
           prev_led_color_helper: input_text.downstairs_mudroom_led_color
+          automation_entity_ids:
+            - automation.light_inovelli_downstairs_mudroom_motion_detected_lights_on
+            - automation.light_inovelli_downstairs_mudroom_motion_cleared_lights_off
