--- a/scripts/inovelli/entities-defined/hold_all_inovelli_presence_controlled_switches.yaml
+++ b/scripts/inovelli/entities-defined/hold_all_inovelli_presence_controlled_switches.yaml
@@ -43,6 +43,9 @@ sequence:
           helper: input_text.downstairs_bathroom_vanity_led_color
         - switch_name: downstairs_mudroom_inovelli_presence
           helper: input_text.downstairs_mudroom_led_color
+          automation_entity_ids:
+            - automation.light_inovelli_downstairs_mudroom_motion_detected_lights_on
+            - automation.light_inovelli_downstairs_mudroom_motion_cleared_lights_off
         - switch_name: garage_interior_mudroom_inovelli_presence
           helper: input_text.garage_mudroom_door_led_color
         - switch_name: upstairs_kids_bathroom_vanity_inovelli_presence
