--- a/scripts/inovelli/entities-defined/hold_all_inovelli_presence_controlled_switches.yaml
+++ b/scripts/inovelli/entities-defined/hold_all_inovelli_presence_controlled_switches.yaml
@@ -52,6 +52,11 @@ sequence:
           helper: input_text.upstairs_kids_vanity_led_color
         - switch_name: upstairs_laundry_inovlli_presence
           helper: input_text.upstairs_laundry_led_color
+        - switch_name: upstairs_primary_closet_inovelli_presence
+          helper: input_text.upstairs_primary_closet_led_color
+          automation_entity_ids:
+            - automation.light_zse41_primary_closet_door_open_turn_on
+            - automation.light_zse41_primary_closet_door_closed_turn_off
         - switch_name: upstairs_primary_bath_vanity_inovelli_presence
           helper: input_text.upstairs_primary_vanity_led_color
           automation_entity_ids:
